# KThreadPool

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
Code/Include/: KThreadManager.hpp  KThreadPool.hpp
Code/Source/: KThreadManager.cpp  KThreadPool.cpp
Test/: CMakeLists.txt  main.cpp
